[tool.poetry]
name = "aurasound"
version = "0.1.0"
description = ""
authors = ["David Lin <woei66@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
slack-sdk = "^3.20.2"
pysine = "^0.9.2"
gtts = "^2.3.1"
pygame = "^2.3.0"
numpy = "^1.24.3"
pyaudio = "^0.2.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
